--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,24 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+certifi = "==2022.12.7"
+chardet = "==3.0.4"
+click = "==8.1.3"
+googletrans = "==3.1.0a0"
+h11 = "==0.9.0"
+h2 = "==3.2.0"
+hpack = "==3.0.0"
+hstspreload = "==2022.12.1"
+httpcore = "==0.9.1"
+httpx = "==0.13.3"
+hyperframe = "==5.2.0"
+idna = "==2.10"
+joblib = "==1.2.0"
+nltk = "==3.7"
+regex = "==2022.10.31"
+rfc3986 = "==1.5.0"
+sniffio = "==1.3.0"
+tqdm = "==4.64.1"
 
 [dev-packages]
 
